Changed to copy all the time the files when bash start.sh is called

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     stdin_open: true
     tty: true
     volumes:
-    - ./testValgrind:/pipex/testValgrind
-    - ./testValgrind_bonus:/pipex/testValgrind_bonus
+    - ./testValgrind:/testValgrind
+    - ./testValgrind_bonus:/testValgrind_bonus
+    - ./pipex:/pipex
